# agentic-ai-workshop

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  README.md  databricks.yml  hr_synthetic_database.ipynb  mkdocs.yml  people_analytics_agent.ipynb  pyproject.toml
.github/instructions/: python.instructions.md
.github/workflows/: gh-pages.yml
databricks/: app.yml  download_dataset.yml
docs/: adp-brazil-labs.md  index.md  prerequisites.md  resources.md
docs/agentic-ai/: agents-vs-workflows.md  generative-ai.md  index.md
docs/agentic-ai/agents/: index.md  memory.md  rag.md  state.md  tools.md
docs/agentic-ai/context-engineering/: index.md  prompt-engineering.md  prompting-techniques.md
docs/agentic-ai/context-engineering/prompt-engineering/: advanced-techniques.md  agent-prompting.md  best-practices.md  chain-of-thought.md  index.md  meta-prompting.md  role-based-prompts.md  zero-shot-few-shot.md
docs/agentic-ai/frameworks/: index.md  langgraph.md  llamaindex.md  other-frameworks.md  pydantic-ai.md  smolagents.md  strands-agents.md
docs/agentic-ai/observability/: index.md  langfuse.md  langtrace.md  logfire.md  mlflow.md  strategies.md
docs/assets/: diagrams.drawio
docs/images/: agentic-ai-workshop.excalidraw
docs/instructors/: douglas-trajano.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/workshop/: database.md  index.md  next-steps.md  people-analytics-agent.md  setup.md
src/app/: app.yaml  main.py  requirements.txt
src/app/.chainlit/: config.toml
src/app/backend/: agent.py  settings.py  utils.py
src/app/backend/auth/: ensure_identity.py  identity.py
src/app/backend/database/: chainlit.py  chainlit_storage_client.py  lakebase.py
src/dataset/: __init__.py  database.py  notebook.ipynb  utils.py  workflow.py
src/dataset/models/: __init__.py  commons.py  company.py  compensation.py  employee.py  organizational.py
src/jobs/: download_dataset.py  setup_app_lakebase.py
tmp/: workshop.md
